[gd_scene load_steps=2 format=3 uid="uid://dfgtlo7qi3pad"]

[ext_resource type="Script" path="res://civilian_base/civilian_base.gd" id="1_x67iw"]

[node name="civilian_base" type="CharacterBody2D"]
script = ExtResource("1_x67iw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CivSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="CivHolder" type="Node" parent="."]

[node name="NavAgent" type="NavigationAgent2D" parent="."]

[connection signal="timeout" from="CivSpawnTimer" to="." method="_on_civ_spawn_timer_timeout"]
[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
